--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "react-with-circle-ci",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=14.18.0",
+    "npm": ">=6",
+    "yarn": ">=1"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -16,7 +21,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "eslintConfig": {
     "extends": [
